--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 
 </body>
 <script>
- consoleText(['Hello All.', 'Shalom', 'வணக்கம்.'], 'text',['tomato','rebeccapurple','lightblue']);
+ consoleText(['Namaste', 'Hello all', 'Shalom', 'Sati śrī akāla' , 'āssālam ‘alaykum' , ' nômôskar ' , ' aadaab ', 'parnām', 'vaṇakkam', 'Radhe–Radhe',], 'text',['tomato','rebeccapurple','lightblue']);
 
 function consoleText(words, id, colors) {
   if (colors === undefined) colors = ['#fff'];
